--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/platzi/curso-manipulacion-de-arrays#readme",
   "dependencies": {
+    "date-fns": "^2.22.1",
     "http-server": "^0.12.3"
   }
 }
